@@ -28,9 +28,9 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'org.apache.logging.log4j:log4j-api:2.17.2'
     compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.14.0.0'
-    compile 'org.springframework:spring-beans:5.3.18'
-    compile 'org.springframework:spring-jdbc:5.3.18'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.15.0.0'
+    compile 'org.springframework:spring-beans:5.3.19'
+    compile 'org.springframework:spring-jdbc:5.3.19'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
