@@ -1,6 +1,7 @@
 Jul 26, 2022
   fix to prevent erroneous deletion of dags / obsoletion of terms
-
+  MP ontology: added loading of ORCID ids into 'created_by' field
+  
 Jul 22, 2022
   added EFO-to-RDO mapper
 
